--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -20,7 +20,7 @@
             <%= record.name %>
           </td>
           <td class="govuk-table__cell">
-            <%#= valid_record_tag(record) %>
+            <%= valid_record_tag(record) %>
           </td>
           <td class="govuk-table__cell">
             <%= link_to "Show this record", record %>
