Add user login with users controller to allow user management
- Users must be logged in to publish metadata and access users

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,12 @@
 <h1 class="govuk-heading-l">Welcome</h1>
 <p class="govuk-body">This is a demo of an API client for the Data Marketplace</p>
+
+<p class="govuk-body">
+  Please note that you must be logged in to be able to publish a Metadata record to the
+  Data Marketplace, and that you must be registered in the application to be able to log
+  in.
+</p>
+
+<p class="govuk-body">
+  Please contact the Data Marketplace team to have yourself registered in the application.
+</p>
