--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,17 +31,33 @@
           href: records_path,
           active: current_page?(records_path)
         )
+
+        header.with_navigation_item(
+          text: 'Users',
+          href: users_path,
+          active: current_page?(users_path)
+        ) if user_signed_in?
       end
     %>
 
     <div class="govuk-width-container ">
       <main class="govuk-main-wrapper " id="main-content" role="main">
         <div class="govuk-grid-row">
-          <div class="govuk-grid-column-full">
+          <div class="govuk-grid-column-three-quarters">
+            &nbsp;
             <%= content_tag(:p, notice, class: 'notice', style: "color: green") if notice.present? %>
             <%= content_tag(:p, alert, class: 'alert', style: "color: red") if alert.present? %>
+          </div>
+          <div class="govuk-grid-column-one-quarter govuk-!-text-align-right">
+            <%= user_signed_in? ? logout_button : login_button %>
+          </div>
+        </div>
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-full">
 
             <%= yield %>
+
+
           </div>
         </div>
       </main>
