--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -6,12 +6,14 @@
   <%= JSON.pretty_generate(@record.metadata) %>
   </pre>
 
-  <div>
-    <%= govuk_button_to "Publish this record", publish_record_path(@record), warning: true %>
-  </div>
+  <% if user_signed_in? %>
+    <div>
+      <%= govuk_button_to "Publish this record", publish_record_path(@record), warning: true %>
+    </div>
+  <% end %>
 
   <div class="govuk-!-padding-bottom-2">
-      <%= govuk_link_to "Edit this record", edit_record_path(@record) %> |
+    <%= govuk_link_to "Edit this record", edit_record_path(@record) %> |
     <%= govuk_link_to "Back to records", records_path %>
   </div>
 </div>
