--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -6,18 +6,19 @@
   <%= JSON.pretty_generate(@record.metadata) %>
   </pre>
 
-  <% if user_signed_in? %>
-    <div>
-      <%= govuk_button_to "Publish this record", publish_record_path(@record), warning: true %>
-    </div>
-  <% end %>
 
   <div class="govuk-!-padding-bottom-2">
-    <%= govuk_link_to "Edit this record", edit_record_path(@record) %> |
-    <%= govuk_link_to "Back to records", records_path %>
+    <%= govuk_link_to "Edit this record", edit_record_path(@record) %>
+    <% if @record.published? %>
+      <p class="govuk-body">Any edits to the record will be pushed to the Data Marketplace</p>
+    <% else %>
+      <%= govuk_button_to "Publish this record", publish_record_path(@record), warning: true %>
+    <% end %>
   </div>
 
-  <% if @record.remote_id? && @remote_metadata %>
+
+
+  <% if @remote_metadata %>
     <h2 class=govuk-heading-m>Record within Data Marketplace</h2>
 
     <p class="govuk-body">
@@ -36,4 +37,6 @@
     </pre>
 
   <% end %>
+
+  <%= govuk_link_to "Back to records", records_path %>
 </div>
