--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -11,8 +11,10 @@
     <%= govuk_link_to "Edit this record", edit_record_path(@record) %>
     <% if @record.published? %>
       <p class="govuk-body">Any edits to the record will be pushed to the Data Marketplace</p>
+
+      <%= govuk_button_to "Remove this record from the Data Marketplace", unpublish_record_path(@record), warning: true %>
     <% else %>
-      <%= govuk_button_to "Publish this record", publish_record_path(@record), warning: true %>
+      <%= govuk_button_to "Publish this record on the Data Marketplace", publish_record_path(@record), warning: true %>
     <% end %>
   </div>
 
