--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,8 +45,8 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-three-quarters">
             &nbsp;
-            <%= content_tag(:p, notice, class: 'notice', style: "color: green") if notice.present? %>
-            <%= content_tag(:p, alert, class: 'alert', style: "color: red") if alert.present? %>
+            <%= govuk_notification_banner(title_text: 'Notice', text: notice, success: true) if notice.present? %>
+            <%= govuk_notification_banner(title_text: 'Alert', text: alert) if alert.present? %>
           </div>
           <div class="govuk-grid-column-one-quarter govuk-!-text-align-right">
             <%= user_signed_in? ? logout_button : login_button %>
