--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,6 +12,7 @@
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
         <th scope="col" class="govuk-table__header">Email</th>
+        <th scope="col" class="govuk-table__header">Role</th>
         <th scope="col" class="govuk-table__header">Link</th>
       </tr>
     </thead>
@@ -21,6 +22,8 @@
           <td class="govuk-table__cell">
             <%= user.email %>
           </td>
+          <td class="govuk-table__cell">
+            <%= user.admin? ? "Admin" : "User" %>
           <td class="govuk-table__cell">
             <%= link_to "Show this user", user %>
           </td>
