Allow users to view records index and show if not logged in.

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1 class="govuk-heading-l">Records</h1>
 
-<%= govuk_link_to "New record", new_record_path %>
+<%= govuk_link_to("New record", new_record_path) if user_signed_in? %>
 
 <div id="records">
   <table class="govuk-table">
