--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -10,22 +10,23 @@
 <%= JSON.pretty_generate(@record.metadata) %>
   </pre>
 
+  <% if user_signed_in? %>
+    <div class="govuk-!-padding-bottom-4">
+      <%= govuk_link_to "Edit this record", edit_record_path(@record) %>
+    </div>
 
-  <div class="govuk-!-padding-bottom-4">
-    <%= govuk_link_to "Edit this record", edit_record_path(@record) %>
-  </div>
 
-  <div class="govuk-!-padding-bottom-2">
-    <% if @record.published? %>
-      <p class="govuk-body">Any edits to the record will be pushed to the Data Marketplace</p>
-      <%= govuk_button_to "Remove this record from the Data Marketplace", unpublish_record_path(@record), warning: true %>
-    <% else %>
-      <%= govuk_button_to "Publish this record on the Data Marketplace", publish_record_path(@record), class: "govuk-!-padding-bottom-2" %>
+    <div class="govuk-!-padding-bottom-2">
+      <% if @record.published? %>
+        <p class="govuk-body">Any edits to the record will be pushed to the Data Marketplace</p>
+        <%= govuk_button_to "Remove this record from the Data Marketplace", unpublish_record_path(@record), warning: true %>
+      <% else %>
+        <%= govuk_button_to "Publish this record on the Data Marketplace", publish_record_path(@record), class: "govuk-!-padding-bottom-2" %>
 
-      <%= govuk_button_to "Destroy this record", @record, method: :delete, warning: true %>
-    <% end %>
-  </div>
-
+        <%= govuk_button_to "Destroy this record", @record, method: :delete, warning: true %>
+      <% end %>
+    </div>
+  <% end %>
 
 
   <% if @remote_metadata %>
