--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,11 @@
           href: records_path,
           active: current_page?(records_path)
         )
+        header.with_navigation_item(
+          text: 'Sources',
+          href: sources_path,
+          active: current_page?(sources_path)
+        )
 
         header.with_navigation_item(
           text: 'Users',
