Allow data marketplace URLs to be configured
The URLs can be configured via either the Rails configuration or
Environment Variables.

--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -43,7 +43,7 @@
       This record can be viewed
       <%= link_to(
             "here",
-            "https://test.datamarketplace.gov.uk/catalogdata/getcddodataasset?dataAssetId=#{@record.remote_id}"
+            File.join("https://", Rails.configuration.dm_root_url, "/catalogdata/getcddodataasset?dataAssetId=#{@record.remote_id}")
           ) %>
       on the Data Marketplace
     </p>
